<resources>
    <string name="app_name">МАИ</string>

    <!-- Activity title -->
    <string name="activity_title_news">Новости приложения</string>

    <!-- Menu Title -->
    <string name="title_time_table">Расписание</string>
    <string name="title_settings">Настройки</string>
    <string name="title_information">Информация</string>
    <string name="title_exams">Расписание сессии</string>
    <string name="title_campus_map">Общая схема кампуса</string>
    <string name="title_event_info">Информация о событии</string>
    <string name="title_news_app">Новости приложения</string>

    <!-- Settings Fragment -->
    <string name="fragment_settings_button1">Изменить данные о группе</string>
    <string name="fragment_settings_button2">Перезагрузить расписание</string>
    <string name="fragment_settings_button3">Обновить информацию о ВУЗе</string>
    <string name="fragment_settings_button4">Вернуть все скрытые события</string>
    <string name="fragment_settings_buttonnews">Новости приложения</string>
    <string name="fragment_settings_update_data">Обновлять информацию</string>
    <string name="fragment_settings_view_events">Показывать события</string>
    <string name="fragment_settings_info_title">Информация о приложении:</string>
    <string name="fragment_settings_info_version">Версия приложения:</string>
    <string name="fragment_settings_info_author">Автор:</string>
    <string name="fragment_settings_open_mai_web">Открыть сайт МАИ</string>

    <string name="fragment_settings_title1">Ваши данные:</string>
    <string name="fragment_settings_title2">Группа</string>
    <string name="versionString">1.1.018/019.02.2021</string>
    <string name="author">Соляной Леонид</string>
    <string name="appInfo">Неофициальное приложение МАИ,написанное студентом для студентов,
        чтоб облегчить доступ к расписанию и другой информации.
        Вся информация загружается один раз и потом доступна без доступа в интернет.</string>
    <string name="setting_data">Дата последнего фонового обновления:</string>

    <!-- Fragment Information -->
    <string name="titleCumpus">Кампус</string>
    <string name="titleLife">Жизнь</string>
    <string name="fragment_information_map">Общая схема кампуса</string>
    <string name="fragment_information_food">Столовые и буфеты</string>
    <string name="fragment_information_books">Библиотеки</string>
    <string name="fragment_information_sport_group">Спортивные секции</string>
    <string name="fragment_information_stud_organisation">Студенческие объединения</string>
    <string name="fragment_information_creative_group">Творческие коллективы и клубы</string>

    <!-- Fragment Time Table -->
    <string name="fragment_time_table_next_week_item">У вас больше нет пар на этой неделе</string>
    <string name="fragment_time_table_open_next_week_button">Перейти к следующей неделе</string>

    <!-- Fragment Exams -->
    <string name="exam_fragment_error_string">Расписание вашей сесии отсутствует</string>

    <!--Прочие строки -->
    <string name="versionMessage">
        Исправлена ошибка с отсутствием текущей недели. Приносим извенения за доставленные неудобства. В данный момент ведутся переговоры с IT центром и разработка новой версии приложения. Спасибо всем пользователям за то, что продолжаете пользоваться нашим приложением.
    </string>
</resources>