<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <com.raspisanie.mai.View.LogoMAIView
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/drawable_bottom_border">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:textSize="18dp"
                    android:text="@string/titleCumpus"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_map"
                    android:drawableLeft="@drawable/ic_map_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_food"
                    android:drawableLeft="@drawable/ic_fastfood_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_books"
                    android:drawableLeft="@drawable/ic_book_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/drawable_bottom_border">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:textSize="18dp"
                    android:text="@string/titleLife"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_sport_group"
                    android:drawableLeft="@drawable/ic_directions_bike_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/button01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_stud_organisation"
                    android:drawableLeft="@drawable/ic_people_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/button02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_creative_group"
                    android:drawableLeft="@drawable/ic_extension_24px"
                    android:drawableTint="@android:color/darker_gray"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>